fixed wrong font path

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: lato-bold;
-  src: url("../fonts/lato/Lato-Semibold.ttf");
+  src: url("../fonts/lato/Lato-Bold.ttf");
 }
 
 @font-face {
